<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="exo_controls_fastforward_description">Fast forward</string>
    <string name="exo_controls_next_description">Next track</string>
    <string name="exo_controls_pause_description">Pause</string>
    <string name="exo_controls_play_description">Play</string>
    <string name="exo_controls_previous_description">Previous track</string>
    <string name="exo_controls_repeat_all_description">Repeat all</string>
    <string name="exo_controls_repeat_off_description">Repeat none</string>
    <string name="exo_controls_repeat_one_description">Repeat one</string>
    <string name="exo_controls_rewind_description">Rewind</string>
    <string name="exo_controls_stop_description">Stop</string>
    <string name="search_menu_title">Search</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="strNetworkTipsCancelBtn">取消</string>
    <string name="strNetworkTipsConfirmBtn">继续下载</string>
    <string name="strNetworkTipsMessage">你已切换到移动网络，是否继续当前下载？</string>
    <string name="strNetworkTipsTitle">网络提示</string>
    <string name="strNotificationClickToContinue">继续下载</string>
    <string name="strNotificationClickToInstall">点击安装</string>
    <string name="strNotificationClickToRetry">点击重试</string>
    <string name="strNotificationClickToView">点击查看</string>
    <string name="strNotificationDownloadError">下载失败</string>
    <string name="strNotificationDownloadSucc">下载完成</string>
    <string name="strNotificationDownloading">正在下载</string>
    <string name="strNotificationHaveNewVersion">有新版本</string>
    <string name="strToastCheckUpgradeError">检查新版本失败，请稍后重试</string>
    <string name="strToastCheckingUpgrade">正在检查，请稍候...</string>
    <string name="strToastYourAreTheLatestVersion">你已经是最新版了</string>
    <string name="strUpgradeDialogCancelBtn">下次再说</string>
    <string name="strUpgradeDialogContinueBtn">继续</string>
    <string name="strUpgradeDialogFeatureLabel">更新说明</string>
    <string name="strUpgradeDialogFileSizeLabel">包大小</string>
    <string name="strUpgradeDialogInstallBtn">安装</string>
    <string name="strUpgradeDialogRetryBtn">重试</string>
    <string name="strUpgradeDialogUpdateTimeLabel">更新时间</string>
    <string name="strUpgradeDialogUpgradeBtn">立即更新</string>
    <string name="strUpgradeDialogVersionLabel">版本</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="about_content">内容浏览相关</string>
    <string name="about_content_info">首页刷出不喜欢圈子的内容？首页总是刷到重复内容？</string>
    <string name="about_post">作品发布相关</string>
    <string name="about_post_info">作品被锁？作品管理？发布规则？</string>
    <string name="about_report">违规举报相关</string>
    <string name="about_report_info">有人盗图？ 被人骚扰？ 发布内容辣眼睛？</string>
    <string name="about_talk">问答相关</string>
    <string name="about_talk_info">提问被锁定/删除? 发布提问无人参与？</string>
    <string name="about_withdraw_title">提现功能目前只支持在电脑端使用哦 https://bcy.net</string>
    <string name="about_zan">哪些赞会被统计在内？</string>
    <string name="about_zan_des">来自日常、问答、绘画、写作、COS、评论的赞都会被统计。发布更多有趣内容和评论，get更多赞数吧~(*•̀ㅂ•́)و</string>
    <string name="about_zan_slogan">关于赞数</string>
    <string name="accept_feed">接收投喂</string>
    <string name="account_relevance">账号与安全</string>
    <string name="acg_works">原作</string>
    <string name="add">添加</string>
    <string name="add_focus">＋关注</string>
    <string name="add_friends">添加好友</string>
    <string name="add_friends_share_content">搜“%s”加我吧~我在这舔图追文看COS，更日常和作品！一起来玩呀</string>
    <string name="add_friends_share_title">来半次元加我互FO哇</string>
    <string name="add_my_identify">添加身份标签</string>
    <string name="add_tag">添加标签</string>
    <string name="add_to_articleset">添加到连载</string>
    <string name="add_watermark">添加水印</string>
    <string name="addtag">快去添加吧</string>
    <string name="all_cancel">全部取消</string>
    <string name="all_circles">全部原作</string>
    <string name="all_focus">全部关注</string>
    <string name="all_into">查看全部</string>
    <string name="all_people_no_am">所有人 (禁止匿名)</string>
    <string name="all_search">综合</string>
    <string name="all_send_message">正在创建喵~~</string>
    <string name="allow_download">允许作品被下载</string>
    <string name="alway_see_circle">"我
常
逛
的"</string>
    <string name="anonymous_quest">匿名提问</string>
    <string name="anonymous_user">匿名用户</string>
    <string name="answer_not_null">回答不能为空喵~</string>
    <string name="answer_question">问答</string>
    <string name="answer_unit">回答：%s</string>
    <string name="answer_unit_without_n">%s回答</string>
    <string name="answer_your_ask">回应了你的提问，赶快去看看~~</string>
    <string name="answer_your_group_topic">回答了你的提问</string>
    <string name="app_load_address">https://bcy.net/static/app?utm_source=bcy-Android</string>
    <string name="app_name">半次元</string>
    <string name="app_name_long">半次元-二次元创作者社区</string>
    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="apply_img_reply">支持图片回复</string>
    <string name="araki_bangumi">新番</string>
    <string name="area">地区</string>
    <string name="ask_it">向TA提问</string>
    <string name="ask_me_question">向我提问</string>
    <string name="ask_not_null">问题不能为空喵~</string>
    <string name="ask_not_small_5">还需要输入%s个字~</string>
    <string name="ask_setting">勾搭设置</string>
    <string name="ask_your_question">向你提问了，赶快去看看~~</string>
    <string name="at_your_in_comment_reply">在回复中提到了你</string>
    <string name="atleast_one_work_or_tag">至少添加一个原作或标签</string>
    <string name="author_cancel">取消授权喵~</string>
    <string name="author_fail">授权失败喵~</string>
    <string name="author_succ">授权成功喵~~</string>
    <string name="ban_and_report_content">举报</string>
    <string name="ban_circles">屏蔽圈子</string>
    <string name="ban_content_intro">屏蔽该内容</string>
    <string name="ban_setting">屏蔽设置</string>
    <string name="ban_timeline_type">不再显示%s</string>
    <string name="bangumi">番剧</string>
    <string name="bangumi_path">https://bcy.net/bangumi/list/%s?utm_source=bcy-Android</string>
    <string name="bangumi_set">选集</string>
    <string name="base_progressbar_end">已经到底啦喵~</string>
    <string name="base_progressbar_failed">加载失败喵，点击重新加载</string>
    <string name="base_progressbar_loading">正在加载…</string>
    <string name="base_progressbar_loadmore">正在加载新内容喵~</string>
    <string name="base_progressbar_nodata">暂无数据喵，点击重新加载</string>
    <string name="base_progressbar_start">下拉加载更多喵~</string>
    <string name="bcy_net_error">半次元不小心滑了一跤~</string>
    <string name="bcy_people">半次元居民</string>
    <string name="bind_phone">登录手机</string>
    <string name="bind_phone2">绑定手机</string>
    <string name="bind_phone_first">请先绑定手机</string>
    <string name="bind_weibo">绑定微博</string>
    <string name="block_circle_empty_guide_image">https://public.bcyimg.com/astatic/block_circle_empty_guide_image.jpg</string>
    <string name="block_info_two">"你可以在TA的个人主页
将TA加入黑名单!"</string>
    <string name="block_list_in">把 %s 加入黑名单</string>
    <string name="block_noname_gouda">禁止匿名勾搭</string>
    <string name="block_succ">加入黑名单成功</string>
    <string name="block_user_empty_guide_image">https://public.bcyimg.com/astatic/block_user_empty_guide_image.jpg</string>
    <string name="book_nums">订阅数</string>
    <string name="book_succ">订阅成功!</string>
    <string name="book_work_i_like">关注喜欢的原作圈</string>
    <string name="book_your_serise">订阅了你的连载</string>
    <string name="bottom_sheet_behavior">android.support.design.widget.BottomSheetBehavior</string>
    <string name="broadcast">公告</string>
    <string name="cache_has_clear">缓存已清除</string>
    <string name="can_find_history">"你还没有浏览记录，
快去戳戳新内容吧"</string>
    <string name="can_gouda">我可以被哪些人勾搭</string>
    <string name="can_see_rgiht">可见权限</string>
    <string name="cancel_clear">取消</string>
    <string name="cancel_post">取消发布</string>
    <string name="cancle_focus_succ">取消关注成功喵~</string>
    <string name="cant_save">作者已设置禁止保存</string>
    <string name="card_recommended_user_format">%1$s：%2$s</string>
    <string name="catalog">目录</string>
    <string name="change_banner">修改封面</string>
    <string name="change_bind">更改绑定</string>
    <string name="change_head">修改头像</string>
    <string name="change_pwd">修改密码</string>
    <string name="chapter_index_container">章节目录(%s)</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="check_orgin">查看原图</string>
    <string name="check_process">审核中</string>
    <string name="check_rotate">旋转图片</string>
    <string name="choosefriend">我的关注</string>
    <string name="circle">圈子</string>
    <string name="circle_name">circlename</string>
    <string name="circle_tag_detail_path">https://bcy.net/tags/name/%s?utm_source=bcy-Android</string>
    <string name="circle_work_detail_path">https://bcy.net/circle/index/%s?utm_source=bcy-Android</string>
    <string name="detail_locked_two">请等待作者修改</string>
    <string name="detail_login_two">点击登录/注册</string>
    <string name="detail_need_fans_one">该作品已被作者设置为只有粉丝可见</string>
    <string name="detail_need_fans_two">点击成为Ta的粉丝</string>
    <string name="detail_need_login_one">该作品已被作者设置为只有登录可见</string>
    <string name="draw_writer_coser">绘师、写手、Coser</string>
    <string name="find_more_pro">发现更多达人</string>
    <string name="focus_moe_friend">关注优质用户</string>
    <string name="inputfeedback">请把你的宝贵意见告诉我们</string>
    <string name="lock_reason">该作品属于下属违规情况，已被管理员锁定</string>
    <string name="morewords">还可以输入</string>
    <string name="noraml_question">常见问题</string>
    <string name="or">or</string>
    <string name="play_with_friend">第一时间获取他们的发布动态</string>
    <string name="post_fix">提交审核</string>
    <string name="update_complate">修改完成</string>
    <string name="update_work">修改作品</string>
    <string name="word">字</string>
    <string name="you_can">你可以</string>
</resources>