<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:background="@color/white" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:paddingBottom="92.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <ImageView android:layout_gravity="center_horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="32.0dip" android:src="@drawable/locked" />
        <LinearLayout android:orientation="vertical" android:paddingLeft="16.0dip" android:paddingRight="16.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="16.0dip" android:text="@string/lock_reason" style="@style/font_14_pink" />
            <TextView android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:text="@string/detail_locked_two" style="@style/font_16_333333" />
            <TextView android:id="@+id/locked_reason" android:scrollbars="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="4.0dip" android:layout_marginBottom="24.0dip" android:lineSpacingExtra="6.0dip" style="@style/font_14_333333" />
        </LinearLayout>
        <LinearLayout android:orientation="vertical" android:id="@+id/fix_container" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <View android:background="@color/block_line" android:layout_width="fill_parent" android:layout_height="0.5dip" />
            <LinearLayout android:padding="16.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="8.0dip">
                <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_weight="1.0">
                    <TextView android:gravity="center" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/you_can" style="@style/font_13_333333" />
                    <TextView android:gravity="center" android:id="@+id/update_btn" android:background="@drawable/shape_solid_pink_radius_14" android:paddingTop="8.0dip" android:paddingBottom="8.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:text="@string/update_work" style="@style/font_13_ffffff" />
                </LinearLayout>
                <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="32.0dip" android:layout_marginRight="32.0dip" android:text="@string/or" style="@style/font_13_333333" />
                <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_weight="1.0">
                    <TextView android:gravity="center" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/update_complate" style="@style/font_13_333333" />
                    <TextView android:gravity="center" android:id="@+id/post_update_btn" android:background="@drawable/shape_solid_trans_stoke_1_pink_radius_16" android:paddingTop="8.0dip" android:paddingBottom="8.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:text="@string/post_fix" style="@style/font_13_pink" />
                    <TextView android:gravity="center" android:id="@+id/post_update_btn_lock" android:background="@drawable/shape_solid_trans_stoke_05_999999_radius_16" android:paddingTop="8.0dip" android:paddingBottom="8.0dip" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:text="@string/check_process" style="@style/font_13_999999" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>