<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <include android:id="@+id/base_title" layout="@layout/base_actionbar_layout" />
        <EditText android:textColorHint="@color/line" android:gravity="top" android:id="@+id/et_feedback" android:background="@color/white" android:paddingLeft="12.0dip" android:paddingTop="12.0dip" android:paddingRight="12.0dip" android:paddingBottom="22.0dip" android:layout_width="fill_parent" android:layout_height="200.0dip" android:layout_marginTop="16.0dip" android:hint="@string/inputfeedback" android:maxLength="500" android:lineSpacingExtra="2.0dip" style="@style/font_14_cccccc" />
        <LinearLayout android:orientation="horizontal" android:id="@+id/ll_moreword" android:visibility="invisible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="8.0dip" android:layout_marginBottom="8.0dip" android:layout_alignRight="@id/et_feedback" android:layout_alignBottom="@id/et_feedback">
            <TextView android:textSize="10.0sp" android:textColor="@color/grey_ten_level" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/morewords" />
            <TextView android:textSize="10.0sp" android:textColor="@color/pink" android:id="@+id/tv_num" android:layout_width="wrap_content" android:layout_height="wrap_content" />
            <TextView android:textSize="10.0sp" android:textColor="@color/grey_ten_level" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/word" />
        </LinearLayout>
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="12.0dip" android:text="@string/noraml_question" style="@style/font_14_999999" />
            <RelativeLayout android:id="@+id/post_one" android:background="@color/white" android:paddingLeft="12.0dip" android:paddingRight="16.0dip" android:layout_width="fill_parent" android:layout_height="58.0dip" android:layout_marginTop="8.0dip">
                <ImageView android:id="@+id/go_one" android:layout_width="16.0dip" android:layout_height="16.0dip" android:src="@drawable/back_black" android:layout_alignParentRight="true" android:layout_centerVertical="true" android:rotation="180.0" />
                <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_toLeftOf="@id/go_one" android:layout_centerVertical="true">
                    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/about_post" style="@style/font_16_333333" />
                    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/about_post_info" style="@style/font_12_999999" />
                </LinearLayout>
            </RelativeLayout>
            <View android:background="@color/block_line" android:layout_width="fill_parent" android:layout_height="0.5dip" android:layout_marginLeft="12.0dip" />
            <RelativeLayout android:id="@+id/post_two" android:background="@color/white" android:paddingLeft="12.0dip" android:paddingRight="16.0dip" android:layout_width="fill_parent" android:layout_height="58.0dip">
                <ImageView android:id="@+id/go_two" android:layout_width="16.0dip" android:layout_height="16.0dip" android:src="@drawable/back_black" android:layout_alignParentRight="true" android:layout_centerVertical="true" android:rotation="180.0" />
                <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_toLeftOf="@id/go_two" android:layout_centerVertical="true">
                    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/about_talk" style="@style/font_16_333333" />
                    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/about_talk_info" style="@style/font_12_999999" />
                </LinearLayout>
            </RelativeLayout>
            <View android:background="@color/block_line" android:layout_width="fill_parent" android:layout_height="0.5dip" android:layout_marginLeft="12.0dip" />
            <RelativeLayout android:id="@+id/post_three" android:background="@color/white" android:paddingLeft="12.0dip" android:paddingRight="16.0dip" android:layout_width="fill_parent" android:layout_height="58.0dip">
                <ImageView android:id="@+id/go_three" android:layout_width="16.0dip" android:layout_height="16.0dip" android:src="@drawable/back_black" android:layout_alignParentRight="true" android:layout_centerVertical="true" android:rotation="180.0" />
                <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_toLeftOf="@id/go_three" android:layout_centerVertical="true">
                    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/about_report" style="@style/font_16_333333" />
                    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/about_report_info" style="@style/font_12_999999" />
                </LinearLayout>
            </RelativeLayout>
            <View android:background="@color/block_line" android:layout_width="fill_parent" android:layout_height="0.5dip" android:layout_marginLeft="12.0dip" />
            <RelativeLayout android:id="@+id/post_four" android:background="@color/white" android:paddingLeft="12.0dip" android:paddingRight="16.0dip" android:layout_width="fill_parent" android:layout_height="58.0dip">
                <ImageView android:id="@+id/go_four" android:layout_width="16.0dip" android:layout_height="16.0dip" android:src="@drawable/back_black" android:layout_alignParentRight="true" android:layout_centerVertical="true" android:rotation="180.0" />
                <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_toLeftOf="@id/go_four" android:layout_centerVertical="true">
                    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/about_content" style="@style/font_16_333333" />
                    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/about_content_info" style="@style/font_12_999999" />
                </LinearLayout>
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>
</ScrollView>