<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:padding="12.0dip">

        <ImageView
            android:id="@+id/user_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/local_user_add" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8.0dip"
            android:layout_toRightOf="@id/user_icon"
            android:orientation="vertical">

            <TextView
                style="@style/font_15_333333"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/find_more_pro" />

            <TextView
                style="@style/font_13_999999"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/draw_writer_coser" />
        </LinearLayout>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@drawable/go_gray" />
    </RelativeLayout>

    <com.xh.study.bcy.widget.Space
        android:layout_width="fill_parent"
        android:layout_height="8.0dip" />

    <LinearLayout
        android:id="@+id/feed_empty"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60.0dip"
            android:src="@drawable/empty_bcy" />

        <TextView
            style="@style/font_13_999999"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/focus_moe_friend" />

        <TextView
            style="@style/font_13_999999"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/play_with_friend" />
    </LinearLayout>
</LinearLayout>