<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/start_view"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingBottom="12.0dip"
        android:paddingTop="12.0dip"
        android:visibility="visible">

        <TextView
            style="@style/font_12_999999"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8.0dip"
            android:text="@string/base_progressbar_start" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/loading_view"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingBottom="12.0dip"
        android:paddingTop="12.0dip"
        android:visibility="gone">

        <ProgressBar
            android:layout_width="16.0dip"
            android:layout_height="16.0dip"
            android:indeterminateDrawable="@drawable/ani_bottom_loading" />

        <TextView
            style="@style/font_12_999999"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8.0dip"
            android:text="@string/base_progressbar_loadmore" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/end_view"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingBottom="12.0dip"
        android:paddingTop="12.0dip"
        android:visibility="gone">

        <TextView
            style="@style/font_12_999999"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8.0dip"
            android:text="@string/base_progressbar_end" />
    </LinearLayout>
</LinearLayout>